# TreeExample

./: .gitignore  Treetest.cabal  stack.yaml
app/: Main.hs  TreeSample  TreeSample2  demo.hs
src/: Parser.hs  Tree.hs  TreeFlat.hs  TreeFullFlat.hs  TreeGen.hs  TreeIOFlat.hs  TreeOpt.hs  TreeSimple.hs
test/: Spec.hs  TestFlat.hs  TestFull.hs  TestIOFlat.hs  TestOpt.hs  TestSimple.hs
