name:                Treetest
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Treetest#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      ,TreeSimple
                      ,TreeFlat
                      ,TreeIOFlat
                      ,TreeOpt
                      ,Tree
                      ,Parser
  ghc-options:         -fno-warn-tabs -XMagicHash -O2 -funbox-strict-fields

  build-depends:       base >= 4.7 && < 5
                      ,array  
--unboxed
                      ,words
                      ,parsec
                      ,vector
                      ,vector-th-unbox
 --                      ,int >= 0.1.2
                      ,bits
  default-language:    Haskell2010

executable Treetest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Treetest
                      ,array  
  ghc-options:         -fno-warn-tabs -O2 -funbox-strict-fields
			---  -prof -auto-all -rtsopts  -RTS -p -hy
  default-language:    Haskell2010

test-suite Treetest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Treetest
                     , clock
                     , formatting
                     , deepseq
  ghc-options:         -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Treetest
